--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@
 
   <link ios-href="build/css/app.ios.css" rel="stylesheet">
   <link md-href="build/css/app.md.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
   <link wp-href="build/css/app.wp.css" rel="stylesheet">
 </head>
 <body>
@@ -37,5 +38,6 @@
   <script src="build/js/app.bundle.js"></script>
    <script src="http://maps.google.com/maps/api/js?key=AIzaSyClERgLMu-UcqedvrrFu449xfLfE2aAhyU"></script>
   <script src="cordova.js"></script>
+
 </body>
 </html>
