Updated login (with logo)

--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,8 @@
 
   <link ios-href="build/css/app.ios.css" rel="stylesheet">
   <link md-href="build/css/app.md.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Amita" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link wp-href="build/css/app.wp.css" rel="stylesheet">
 </head>
 <body>
