added searches to the navigation and added menu toggle to savedSearches

--- a/app/pages/savedSearches/savedSearches.html
+++ b/app/pages/savedSearches/savedSearches.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-navbar>
+    <button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>Shopper</ion-title>
   </ion-navbar>
 </ion-header>
